# face-mask-recognition

./: pyproject.toml
facemaskrecognition/: image_extracting.py  main.ipynb  model_creation.py  testerino.ipynb
facemaskrecognition/saved_model/my_model/: keras_metadata.pb  saved_model.pb
facemaskrecognition/saved_model/my_model/variables/: variables.index
tests/: test_facemaskrecognition.py
