[tool.poetry]
name = "faceMaskRecognition"
version = "0.1.0"
description = ""
authors = ["Adam Prchal <prchaladam@outlook.cz>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
keras = "^2.8.0"
ipykernel = "^6.13.0"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
